--- a/src/components/UserAdd/UserAdd.css
+++ b/src/components/UserAdd/UserAdd.css
@@ -1,11 +1,12 @@
 .UserAdd{
-    border: 1px solid #ccc;
+    border: 1px solid rgb(27, 27, 27);
+    box-shadow: 0 0 15px rgb(90, 90, 90);
     border-radius: 5px;
     margin-top: 200px;
-    width: 500px;
-    height: 250px;
+    width: 400px;
+    height: 400px;
     padding: 15px;
-    background: rgb(241, 241, 241);
+    background: rgb(255, 255, 255);
 }
 
 .wrapper{
@@ -13,10 +14,16 @@
     position: absolute;
     display: flex;
     justify-content: center;
-    width: 100%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     min-height: 100vh;
     overflow: hidden;
     height: 100%;
     z-index: 10;
     background: rgba(125, 125, 202, 0.294);
+}
+.name{
+    width: 30px;
 }
